@@ -1,3 +1,7 @@
+2007-12-16  Hubert Figuiere  <hub@figuiere.net>
+
+	* exempi/tests/*: refactor the test preparation.
+
 2007-11-13  Hubert Figuiere  <hub@figuiere.net>
 
 	* exempi/tests/*.c: Add a bunch of include deemed necessary 
